@@ -1355,11 +1355,6 @@ operator|.
 name|newXPath
 argument_list|()
 decl_stmt|;
-name|Node
-name|nd
-init|=
-literal|null
-decl_stmt|;
 name|String
 name|xstr
 init|=
@@ -1370,10 +1365,11 @@ argument_list|)
 decl_stmt|;
 try|try
 block|{
-name|nd
-operator|=
+name|NodeList
+name|nodes
+init|=
 operator|(
-name|Node
+name|NodeList
 operator|)
 name|xpath
 operator|.
@@ -1385,14 +1381,21 @@ name|doc
 argument_list|,
 name|XPathConstants
 operator|.
-name|NODE
+name|NODESET
 argument_list|)
-expr_stmt|;
+decl_stmt|;
 if|if
 condition|(
-name|nd
+name|nodes
 operator|==
 literal|null
+operator|||
+literal|0
+operator|==
+name|nodes
+operator|.
+name|getLength
+argument_list|()
 condition|)
 block|{
 if|if
@@ -1430,6 +1433,44 @@ literal|null
 return|;
 block|}
 block|}
+if|if
+condition|(
+literal|1
+operator|<
+name|nodes
+operator|.
+name|getLength
+argument_list|()
+condition|)
+block|{
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+name|name
+operator|+
+literal|" contains more than one value for config path: "
+operator|+
+name|path
+argument_list|)
+throw|;
+block|}
+name|Node
+name|nd
+init|=
+name|nodes
+operator|.
+name|item
+argument_list|(
+literal|0
+argument_list|)
+decl_stmt|;
 name|log
 operator|.
 name|trace
