@@ -680,32 +680,36 @@ comment|// For older solrconfig.xml's we allow the old sections, but never mixed
 name|boolean
 name|hasDeprecatedIndexConfig
 init|=
-name|get
+operator|(
+name|getNode
 argument_list|(
-literal|"indexDefaults/text()"
+literal|"indexDefaults"
 argument_list|,
-literal|null
+literal|false
 argument_list|)
 operator|!=
 literal|null
+operator|)
 operator|||
-name|get
+operator|(
+name|getNode
 argument_list|(
-literal|"mainIndex/text()"
+literal|"mainIndex"
 argument_list|,
-literal|null
+literal|false
 argument_list|)
 operator|!=
 literal|null
+operator|)
 decl_stmt|;
 name|boolean
 name|hasNewIndexConfig
 init|=
-name|get
+name|getNode
 argument_list|(
-literal|"indexConfig/text()"
+literal|"indexConfig"
 argument_list|,
-literal|null
+literal|false
 argument_list|)
 operator|!=
 literal|null
