@@ -62,6 +62,42 @@ literal|"unset.sys.property"
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testMultipleIndexConfigs
+specifier|public
+name|void
+name|testMultipleIndexConfigs
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|assertConfigs
+argument_list|(
+literal|"bad-solrconfig-multiple-indexconfigs.xml"
+argument_list|,
+literal|"schema12.xml"
+argument_list|,
+literal|"indexConfig"
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testMultipleCFS
+specifier|public
+name|void
+name|testMultipleCFS
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|assertConfigs
+argument_list|(
+literal|"bad-solrconfig-multiple-cfs.xml"
+argument_list|,
+literal|"schema12.xml"
+argument_list|,
+literal|"useCompoundFile"
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|testUpdateLogButNoVersionField
 specifier|public
 name|void
